tdf#162833: don't use an OUStringBuffer directly in a concat to assign itself

SUM( CASE WHEN \"dtPayTyp\" = 1 THEN \"dtPayBetrag\" * - 1 ELSE \"dtPayBetrag\" END )
is transformed into:
Sum(Sum( WHEN \"dtPayTyp\" = 1 THEN \"dtPayBetrag\" * - 1 ELSE \"dtPayBetrag\" END)

See https://bugs.documentfoundation.org/show_bug.cgi?id=162833#c3

Change-Id: Ie73dd6871bcda1c22cf6f469bd05ecc4d9dacb4c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172989
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>